src/test/ui/issues/issue-34209.stderr
error: no variant `B` on enum `S`
  --> $DIR/issue-34209.rs:7:9
   |
LL |         S::B { } => { },
   |         ^^^^ help: did you mean: `S::A`

error: aborting due to previous error

